qp-platform/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qp-platform
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      name: qp-platform
  template:
    metadata:
      labels:
        name: qp-platform
    spec:
      containers:
        - name: qp-platform
          image: dockerhub.sihai.com:8081/test/qp-platform:20190926093736
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: harbor
---
apiVersion: v1
kind: Service
metadata:
  name: qp-platform
  namespace: test
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    name: qp-platform
