qp-platform/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qp-platform-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: qp-platform.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: qp-platform
          servicePort: 80
